--- a/regex.ipynb
+++ b/regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'UFRRJ_22.1/UFRRJ_matriculados.txt','w') as o:\n",
+    "with open(f'UFRRJ_22.1/UFRRJ_matricula.txt','w') as o:\n",
     "    o.write('Nome,Curso,Turno,Campus,SISU\\n')\n",
     "    for i in range(total):\n",
     "    # for i in range(1):\n",
@@ -243,11 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "total = 0\n",
+    "\n",
+    "# Remove all files in the folder\n",
+    "folder = 'UFRRJ_22.2/PDFs/'\n",
+    "for filename in os.listdir(folder):\n",
+    "    file_path = os.path.join(folder, filename)\n",
+    "    try:\n",
+    "        os.unlink(file_path)\n",
+    "    except Exception as e:\n",
+    "        print('Failed to delete %s. Reason: %s' % (file_path, e))\n",
+    "\n",
     "with open('UFRRJ_22.2/22_2_links.txt') as f:\n",
     "    text = f.read()\n",
     "    regex = r'<a href=\"([^\"]*)\"'\n",
@@ -260,12 +270,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(total):\n",
-    "    os.system(f'pdftotext UFRRJ_22.2/PDFs/{i}.pdf UFRRJ_22.2/Textos/{i}.txt -colspacing 0.01')"
+    "    os.system(f'pdftotext UFRRJ_22.2/PDFs/{i}.pdf UFRRJ_22.2/Textos/{i}.txt -fixed 4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Sistemas de Informação', 'Engenharia de Materiais', 'Gestão Ambiental', 'Arquitetura e Urbanismo', 'Relações Internacionais', 'Letras - Espanhol', 'Direito', 'Ciências da Computação', 'Geologia', 'Hotelaria', 'Zootecnia', 'Turismo', 'Engenharia de Agrimensura e Cartográfica', 'Geografia', 'Física', 'História', 'Pedagogia', 'Jornalismo', 'Medicina Veterinária', 'Administração', 'Engenharia Agrícola e Ambiental', 'Ciências Sociais', 'Química', 'Matemática', 'Educação Física', 'Agronomia', 'Ciências Agrícolas', 'Engenharia Florestal', 'Letras - Inglês', 'Farmácia', 'Ciências Econômicas', 'Engenharia Química', 'Filosofia', 'Engenharia de Alimentos', 'Ciências Biológicas'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursos = set()\n",
+    "cursos.add('Letras - Inglês')\n",
+    "cursos.add('Letras - Espanhol')\n",
+    "turnos = set()\n",
+    "turnos.add('Integral')\n",
+    "turnos.add('Noturno')\n",
+    "turnos.add('Matutino')\n",
+    "turnos.add('Vespertino')\n",
+    "campus = set()\n",
+    "campus.add('Seropédica')\n",
+    "campus.add('Nova Iguaçu')\n",
+    "campus.add('Três Rios')\n",
+    "\n",
+    "with open('UFRRJ_22.2/22_2_links.txt') as f:\n",
+    "    text = f.read()\n",
+    "    regex = r'<a href=\"[^\"]*\"[^>]*>([^</]*)<'\n",
+    "    pattern = re.compile(regex)\n",
+    "    matches = re.findall(pattern, text)\n",
+    "    for match in matches:\n",
+    "        cursos.add(match)\n",
+    "\n",
+    "print(cursos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_to_string(set):\n",
+    "    string = ''\n",
+    "    for item in set:\n",
+    "        string += item + '|'\n",
+    "    return string[:-1]\n",
+    "\n",
+    "with open(f'2022_2_UFRRJ_matricula.csv','w') as o:\n",
+    "    o.write('Nome,Curso,Turno,Campus,SISU\\n')\n",
+    "    for i in range(total):\n",
+    "    # for i in range(2,3):\n",
+    "        with open(f'UFRRJ_22.2/Textos/{i}.txt', 'r') as f:\n",
+    "            text = f.read()\n",
+    "            regex = fr'.*({set_to_string(campus)}).*({set_to_string(cursos)}).*({set_to_string(turnos)}) *(.*)\\n'\n",
+    "            pattern = re.compile(regex, re.IGNORECASE)\n",
+    "            matches = re.findall(pattern, text)\n",
+    "            for match in matches:\n",
+    "                curso = replace_name(match[1])\n",
+    "                turno = replace_name(match[2])\n",
+    "                campus = replace_name(match[0])\n",
+    "                nome = replace_name(match[3])\n",
+    "                o.write(f'{nome},{curso},{turno},{campus},2\\n')"
    ]
   }
  ],
@@ -285,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
